--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,10 @@
 	path = lib/chibios
 	url = https://github.com/qmk/ChibiOS
 	branch = master
+[submodule "lib/chibios-contrib"]
+	path = lib/chibios-contrib
+	url = https://github.com/zhaqian12/ChibiOS-Contrib
+	branch = master
 [submodule "lib/googletest"]
 	path = lib/googletest
 	url = https://github.com/qmk/googletest
@@ -17,3 +21,4 @@
 [submodule "lib/pico-sdk"]
 	path = lib/pico-sdk
 	url = https://github.com/qmk/pico-sdk.git
+
