--- a/keyboards/zhaqian/zqlib/via_custom_control/t_via_magic_settings_auto_shift.json
+++ b/keyboards/zhaqian/zqlib/via_custom_control/t_via_magic_settings_auto_shift.json
@@ -4,85 +4,51 @@
         {
             "label": "Enable Auto Shift",
             "type": "toggle",
-            "content": [
-                "id_advanced_magic_auto_shift_config[0]",
-                8,
-                18,
-                0
-            ]
+            "content": ["id_advanced_magic_auto_shift_config0", 8, 18, 0]
         },
         {
+            "showIf": "{id_advanced_magic_auto_shift_config0} != 0",
             "label": "Enable Auto Shift for Modifiers",
             "type": "toggle",
-            "content": [
-                "id_advanced_magic_auto_shift_config[1]",
-                8,
-                18,
-                1
-            ]
+            "content": ["id_advanced_magic_auto_shift_config[1]", 8, 18, 1]
         },
         {
+            "showIf": "{id_advanced_magic_auto_shift_config0} != 0",
             "label": "Disable Auto Shift for Alpha Keys",
             "type": "toggle",
-            "content": [
-                "id_advanced_magic_auto_shift_config[2]",
-                8,
-                18,
-                2
-            ]
+            "content": ["id_advanced_magic_auto_shift_config[2]", 8, 18, 2]
         },
         {
+            "showIf": "{id_advanced_magic_auto_shift_config0} != 0",
             "label": "Disable Auto Shift for Numeric Keys",
             "type": "toggle",
-            "content": [
-                "id_advanced_magic_auto_shift_config[3]",
-                8,
-                18,
-                3
-            ]
+            "content": ["id_advanced_magic_auto_shift_config[3]", 8, 18, 3]
         },
         {
+            "showIf": "{id_advanced_magic_auto_shift_config0} != 0",
             "label": "Disable Auto Shift for Special Keys",
             "type": "toggle",
-            "content": [
-                "id_advanced_magic_auto_shift_config[4]",
-                8,
-                18,
-                4
-            ]
+            "content": ["id_advanced_magic_auto_shift_config[4]", 8, 18, 4]
         },
         {
+            "showIf": "{id_advanced_magic_auto_shift_config0} != 0",
             "label": "Enable Keyrepeat",
             "type": "toggle",
-            "content": [
-                "id_advanced_magic_auto_shift_config[5]",
-                8,
-                18,
-                5
-            ]
+            "content": ["id_advanced_magic_auto_shift_config[5]", 8, 18, 5]
         },
         {
+            "showIf": "{id_advanced_magic_auto_shift_config0} != 0",
             "label": "Disable Automatically Keyrepeating when is exceeded.",
             "type": "toggle",
             "content": [
-                "id_advanced_magic_auto_shift_config[6]",
-                8,
-                18,
-                6
-            ]
+                "id_advanced_magic_auto_shift_config[6]", 8, 18, 6]
         },
         {
+            "showIf": "{id_advanced_magic_auto_shift_config0} != 0",
             "label": "Auto Shift Timeout(ms)",
             "type": "range",
-            "options": [
-                0,
-                9999
-            ],
-            "content": [
-                "id_advanced_magic_tap_hold_caps_delay",
-                8,
-                17
-            ]
+            "options": [0, 9999],
+            "content": ["id_advanced_magic_auto_shift_timeout", 8, 17]
         }
     ]
 }
