--- a/keyboards/zhaqian/zqlib/via_custom_control/t_via_magic_settings_grave_esc.json
+++ b/keyboards/zhaqian/zqlib/via_custom_control/t_via_magic_settings_grave_esc.json
@@ -4,42 +4,22 @@
         {
             "label": "Always send Escape if Alt is pressed",
             "type": "toggle",
-            "content": [
-                "id_advanced_magic_grave_esc_override[0]",
-                8,
-                11,
-                0
-            ]
+            "content": ["id_advanced_magic_grave_esc_override[0]", 8, 11, 0]
         },
         {
             "label": "Always send Escape if Ctrl is pressed",
             "type": "toggle",
-            "content": [
-                "id_advanced_magic_grave_esc_override[1]",
-                8,
-                11,
-                1
-            ]
+            "content": ["id_advanced_magic_grave_esc_override[1]", 8, 11, 1]
         },
         {
             "label": "Always send Escape if Gui is pressed",
             "type": "toggle",
-            "content": [
-                "id_advanced_magic_grave_esc_override[2]",
-                8,
-                11,
-                2
-            ]
+            "content": ["id_advanced_magic_grave_esc_override[2]", 8, 11, 2]
         },
         {
             "label": "Always send Escape if Shift is pressed",
             "type": "toggle",
-            "content": [
-                "id_advanced_magic_grave_esc_override[3]",
-                8,
-                11,
-                3
-            ]
+            "content": ["id_advanced_magic_grave_esc_override[3]", 8, 11, 3]
         }
     ]
 }
