--- a/keyboards/zhaqian/zqlib/via_custom_control/t_via_maigc_settings_keyboard.json
+++ b/keyboards/zhaqian/zqlib/via_custom_control/t_via_maigc_settings_keyboard.json
@@ -4,24 +4,13 @@
         {
             "label": "Reset All Settings",
             "type": "toggle",
-            "content": [
-                "id_advanced_magic_settings_reset",
-                8,
-                0
-            ]
+            "content": ["id_advanced_magic_settings_reset", 8, 0]
         },
         {
             "label": "Debounce Time",
             "type": "range",
-            "options": [
-                0,
-                255
-            ],
-            "content": [
-                "id_advanced_magic_debounce",
-                8,
-                1
-            ]
+            "options": [0, 255],
+            "content": ["id_advanced_magic_debounce", 8, 1]
         }
     ]
 }
