--- a/keyboards/zhaqian/zqlib/via_custom_control/t_via_magic_settings_combo.json
+++ b/keyboards/zhaqian/zqlib/via_custom_control/t_via_magic_settings_combo.json
@@ -44,7 +44,7 @@
 
 // CN Template
 {
-    "label": "\u7ec4\u5408\u952e",
+    "label": "\u7ec4\u5408\u952e\u8bbe\u7f6e",
     "content": [
         {
             "label": "\u542f\u7528\u7ec4\u5408\u952e",
